--- a/3-project/task-manager-gui/task-manager-web-app/src/components/TaskManagement/TasksProgressIndicator/TasksProgressIndicator.module.css
+++ b/3-project/task-manager-gui/task-manager-web-app/src/components/TaskManagement/TasksProgressIndicator/TasksProgressIndicator.module.css
@@ -5,3 +5,23 @@
   margin-top: 2px;
   margin-bottom: 2px;
 }
+
+.progressBar {
+  margin-right: 1px;
+  border-radius: 5px;
+}
+
+.scheduledTasksProgressBar {
+  composes: progressBar;
+  background-color: blue;
+}
+
+.finishedTasksProgressBar {
+  composes: progressBar;
+  background-color: green;
+}
+
+.cancelledTasksProgressBar {
+  composes: progressBar;
+  background-color: gray;
+}
