--- a/3-projects/task-manager-gui/task-manager-web-app/src/components/TaskManagement/TasksOverview/TasksOverview.module.css
+++ b/3-projects/task-manager-gui/task-manager-web-app/src/components/TaskManagement/TasksOverview/TasksOverview.module.css
@@ -1,5 +1,8 @@
-.topContainer {
-  margin-top: 23px;
-  margin-bottom: 17px;
-  margin-left: 15px;
+.contentLoading {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
